툴바에 검색 아이콘 생성(아직 기능은 없음)
home의 tab을 일단 다른 페이지로 연결시켜둠

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="detail_prefer">당신은 정은지타입!</string>
 
     <string name="no_bucket">담긴 목록이 없습니다.</string>
+
+    <string name="action_search">검색</string>
 </resources>
