일자 : 2016-09-06 22:50 작성자 : MIN 수정사항 :   1. drawer menu에서 홈버튼 클릭했을 때도 정상적으로 출력     - 공통 : 생명주기 확인용 로그 추가       · 안드로이드 모니터에서 LOG라고 검색하면 확인할 수 있음.     - MainActivity.java       1) Fragment 초기화 위치 변경           ( onCreate() -> onNavigationItemSeleted() )       2) 초기 화면으로 사용할 Fragment를 띄우는 방식 변경           ( .add -> .replace )
  2. drawer menu를 통해 fragment를 변경할 때 commit 방식 변경
    - commit가 작동되는 순간 fragment의 상태가 변화함.
    - 일반 commit은 fragment의 상태 변화를 감지하지 못함.
    - commitAllowingStateLoss는 현재 상태를 파괴하고 재생성
    - 기존 소스는 주석으로 남겨두었음(150번 줄).

  3. Page_Home에서 사용하는 Tab 코드 변경
    - 라이브러리 파일들 추가
       1) 패키지명 SmartTabLayoutLibrary에 모아둠.
       2) Home - ViewPagerAdapter.java 삭제
    - PageHomeFragment 내용 일부 수정
    - https://github.com/ogaclejapan/SmartTabLayout 참조

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="no_bucket">담긴 목록이 없습니다.</string>
 
     <string name="action_search">검색</string>
+
+    <string name="tab_title_month">월간</string>
+    <string name="tab_title_week">주간</string>
 </resources>
