일자 : 2016-10-06 11:30 작성자 : MIN 수정사항 :   1. 태그 페이지 작성     - Github에서 TagGroup 라이브러리를 이용하였음.     - 해당하는 파일들을 Tag 패키지에 생성     - attrs.xml 생성, strings, styles.xml에 해당 내용 삽입     - page_tag, tag_contetn_list_item, tag_select_menu.xml 생성       (페이지를 띄울 레이아웃 파일들)     - 세부 태그 선택하는 메뉴에서 확인, 취소버튼을 눌렀을 때       수행하는 작업은 현재 미구현상태

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
 
     <string name="tab_title_month">월간</string>
     <string name="tab_title_week">주간</string>
+
+    <string name="add_tag">Add Tag</string>
 </resources>
