수정사항 1. 중간과정2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,8 @@
     <string name="detail_review_dialog_title">제목을 입력해주세요.</string>
     <string name="detail_review_dialog_content">내용을 입력해주세요.</string>
     <string name="detail_review_dialog_submit">등록</string>
+    <string name="detail_put_bucket">버킷리스트에 담기</string>
+    <string name="detail_put_planner">플래너에 담기</string>
 
 
 
