--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,8 +35,10 @@
     <string name="detail_put_bucket">버킷리스트에 담기</string>
     <string name="detail_put_planner">플래너에 담기</string>
 
+    <string name="hourandminute">00</string>
+    <string name="memo">메모를 입력해주세요.</string>
 
-
+    <string name="prefer_delete_index">검사 결과 삭제</string>
 
     <string name="no_bucket">담긴 목록이 없습니다.</string>
 
